# mariHydro

./: .gitignore  CLAUDE.md  Cargo.toml  codelog.py  快捷脚本
marihydro/: Cargo.toml  PHASE3_REFACTOR_SUMMARY.md  PLAN.md
marihydro/apps/mh_cli/: Cargo.toml
marihydro/apps/mh_cli/src/: main.rs
marihydro/apps/mh_cli/src/commands/: convert.rs  info.rs  mod.rs  optimize.rs  run.rs  validate.rs
marihydro/apps/mh_desktop/: Cargo.toml  tauri.conf.json
marihydro/apps/mh_desktop/src/: App.tsx  index.html  main.tsx
marihydro/apps/mh_desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
marihydro/apps/mh_desktop/src-tauri/src/: main.rs  state.rs
marihydro/apps/mh_desktop/src/hooks/: useHotUpdate.ts  useMeshStream.ts  useRustBridge.ts
marihydro/apps/mh_desktop/src/stores/: meshStore.ts  simulationStore.ts  terrainStore.ts
marihydro/apps/mh_desktop/src/utils/: binaryProtocol.ts  geoTransform.ts
marihydro/crates/: extract_crates.ps1
marihydro/crates/mh_agent/: Cargo.toml
marihydro/crates/mh_agent/src/: assimilation.rs  lib.rs  observation.rs  registry.rs  remote_sensing.rs  surrogate.rs
marihydro/crates/mh_config/: Cargo.toml
marihydro/crates/mh_config/src/: dyn_solver.rs  error.rs  lib.rs  precision.rs  solver_config.rs
marihydro/crates/mh_core/: Cargo.toml
marihydro/crates/mh_core/src/: backend.rs  buffer.rs  indices.rs  lib.rs  precision.rs  scalar.rs  tolerance.rs
marihydro/crates/mh_editor/: Cargo.toml
marihydro/crates/mh_editor/src/: document.rs  incremental.rs  lib.rs  selection.rs  session.rs
marihydro/crates/mh_editor/src/command/: mesh_cmd.rs  mod.rs  stack.rs  terrain_cmd.rs
marihydro/crates/mh_foundation/: Cargo.toml
marihydro/crates/mh_foundation/src/: arena.rs  dimension.rs  error.rs  float.rs  index.rs  lib.rs  memory.rs  metrics.rs  scalar.rs  tolerance.rs  tolerance.rs.bak2  validation.rs
marihydro/crates/mh_geo/: Cargo.toml
marihydro/crates/mh_geo/src/: crs.rs  ellipsoid.rs  error.rs  geometry.rs  lib.rs  spatial_index.rs  transform.rs
marihydro/crates/mh_geo/src/projection/: gauss_kruger.rs  math_utils.rs  mod.rs  traits.rs  transverse_mercator.rs  utm.rs  web_mercator.rs
marihydro/crates/mh_io/: Cargo.toml
marihydro/crates/mh_io/src/: checkpoint.rs  error.rs  lib.rs  pipeline.rs  project.rs  snapshot.rs
marihydro/crates/mh_io/src/drivers/: mod.rs  raster.rs
marihydro/crates/mh_io/src/exporters/: mod.rs  shapefile.rs  vtu.rs
marihydro/crates/mh_io/src/import/: mike.rs  mod.rs  timeseries_csv.rs
marihydro/crates/mh_io/src/infra/: config.rs  logger.rs  mod.rs  time.rs
marihydro/crates/mh_io/src/vtu/: binary.rs  mod.rs
marihydro/crates/mh_mesh/: Cargo.toml
marihydro/crates/mh_mesh/src/: attributes.rs  compat.rs  converter.rs  error.rs  frozen.rs  generation.rs  lib.rs  locator.rs  quality.rs  spatial_index.rs  topology.rs  traits.rs
marihydro/crates/mh_mesh/src/algorithms/: boundary.rs  coloring.rs  mod.rs  quality_metrics.rs  refine.rs  smooth.rs  triangulate.rs  validation.rs
marihydro/crates/mh_mesh/src/halfedge/: mesh.rs  mod.rs  operations.rs  traversal.rs  validate.rs
marihydro/crates/mh_mesh/src/io/: fields.rs  geojson.rs  gmsh.rs  mhb.rs  mod.rs
marihydro/crates/mh_physics/: Cargo.toml
marihydro/crates/mh_physics/docs/: ARCHITECTURE_SCALAR.md
marihydro/crates/mh_physics/src/: adapter.rs  fields.rs  lib.rs  operators.rs  state.rs  traits.rs  types.rs
marihydro/crates/mh_physics/src/assimilation/: bridge.rs  conservation.rs  mod.rs
marihydro/crates/mh_physics/tests/: ai_assimilation.rs  backend_generic.rs  benchmark_implicit.rs  dambreak.rs  mass_conservation.rs  numerics_tests.rs  pathological_tests.rs  physics_tests.rs  sediment_coupling.rs  smoke_test.rs  strategy_switching.rs  validation_thacker.rs
marihydro/crates/mh_runtime/: Cargo.toml
marihydro/crates/mh_runtime/src/: arena_ext.rs  backend.rs  buffer.rs  error.rs  indices.rs  lib.rs  metrics.rs  scalar.rs  tolerance.rs
marihydro/crates/mh_terrain/: Cargo.toml
marihydro/crates/mh_terrain/src/: lib.rs  provider.rs  raster.rs  tiled.rs  tin.rs
marihydro/crates/mh_workflow/: Cargo.toml
marihydro/crates/mh_workflow/src/: events.rs  job.rs  job_v2.rs  lib.rs  manager.rs  runner.rs  scheduler.rs  storage.rs
marihydro/docs/: MariHydro 系统架构重构完整方案.md  MariHydro 重构完善计划 - 进度审查与后续执行方案.md
marihydro/docs/refactoring/: EXECUTION_SUMMARY.md  PROGRESS_PHASE0-4.md  PROGRESS_PHASE5-7.md  README.md  phase0-cleanup.md  phase1-state-mesh.md  phase2-solver-strategy.md  phase3-sources-tracer.md  phase4-sediment.md  phase5-ai-agent.md  phase6-gpu-prep.md  phase7-testing.md
marihydro/legacy_src/src-tauri/src/: lib.rs
marihydro/scripts/: check_global_state.ps1  check_global_state.sh  check_hardcoded_f64.ps1  check_hardcoded_f64.sh  check_index_uniqueness.ps1  check_index_uniqueness.sh  refactor_scalar.ps1  verify_architecture.ps1
marihydro/tests/fixtures/meshes/: complex_estuary.msh  river_section.msh  simple_triangle.msh
marihydro/tests/fixtures/terrain/: dem_sample.tif
marihydro/tests/integration/: hot_update_test.rs  mesh_edit_test.rs  simulation_test.rs
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src-tauri/src/marihydro/: mod.rs  types.rs
src-tauri/src/marihydro/domain/: boundary.rs  feature.rs  geometry_mapper.rs  interpolator.rs  mesh.rs  mod.rs  rasterizer.rs  state.rs
src-tauri/src/marihydro/forcing/: context.rs  manager.rs  mod.rs  river.rs  tide.rs  wind.rs
src-tauri/src/marihydro/geo/: crs.rs  mod.rs  transform.rs
src-tauri/src/marihydro/infra/: config.rs  constants.rs  context.rs  db.rs  error.rs  logger.rs  manifest.rs  mod.rs  time.rs
src-tauri/src/marihydro/io/: mod.rs  storage.rs  traits.rs  types.rs
src-tauri/src/marihydro/physics/: engine.rs  flux_calculator.rs  mod.rs
src-tauri/src/marihydro/simulation/: config.rs  grid.rs  io.rs  solver.rs
src-tauri/src/marihydro/workflow/: job.rs  manager.rs  mod.rs
src_tauri_mod/src-tauri/: Cargo.toml  build.rs
src_tauri_mod/src-tauri/src/: commands.rs
src_tauri_mod/src-tauri/src/marihydro/: mod.rs
(+476 files in other folders)
