# marihydro\Cargo.toml

[workspace]
resolver = "2"
members = [
    # Layer 1: Foundation (零依赖)
    "crates/mh_foundation",
    # Layer 2: Runtime (依赖 Foundation)
    "crates/mh_runtime",
    # Layer 4: Config (依赖 Runtime)
    "crates/mh_config",
    # 功能模块
    "crates/mh_geo",
    "crates/mh_mesh",
    "crates/mh_terrain",
    "crates/mh_editor",
    "crates/mh_physics",
    "crates/mh_io",
    "crates/mh_workflow",
    # "apps/mh_desktop/src-tauri",  # Tauri app 目录为空，暂时禁用
    "apps/mh_cli",
]

[workspace.dependencies]
# 统一版本管理
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

