[package]
name = "marihydro"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error & Log
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"


# Time
# 引入 chrono-tz 以支持 "Asia/Shanghai" 这种字符串解析
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Concurrency
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"

# Math & Geo
ndarray = { version = "0.15", features = ["rayon", "serde"] }
proj = "0.27"
bincode = "1.3"

[lib]
name = "marihydro_lib"
path = "src/lib.rs"

gdal = "0.16"
