[package]
name = "marihydro"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

tokio = { version = "1.0", features = ["full"] }
rayon = "1.10"

ndarray = { version = "0.16", features = ["rayon", "serde"] }
bincode = "1.3"

glam = { version = "0.28", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
rstar = "0.12"
bytemuck = { version = "1.18", features = ["derive"] }

proj = { version = "0.27", optional = true }
gdal = { version = "0.17", optional = true }

[lib]
name = "marihydro_lib"
path = "src/lib.rs"

[features]
default = []
turbulence = []
geo = ["proj", "gdal"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "flux_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
