# marihydro\apps\mh_cli\Cargo.toml

[package]
name = "mh_cli"
version = "0.1.0"
edition = "2021"
description = "MariHydro Command Line Interface"
authors = ["MariHydro Team"]

[dependencies]
# 架构层级
mh_runtime = { path = "../../crates/mh_runtime" }
mh_config = { path = "../../crates/mh_config" }
# 核心库
mh_physics = { path = "../../crates/mh_physics" }
mh_io = { path = "../../crates/mh_io" }

# CLI 框架
clap = { version = "4.4", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

