[package]
name = "mh_config"
version = "0.1.0"
edition = "2021"
authors = ["MariHydro Team"]
description = "MariHydro Config Layer - Precision, SolverConfig, DynSolver"
license = "MIT OR Apache-2.0"

[dependencies]
mh_runtime = { path = "../mh_runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[features]
default = []
layer-guard = []  # CI中启用
