[package]
name = "mh_core"
version = "0.1.0"
edition = "2021"
authors = ["MariHydro Team"]
description = "MariHydro核心抽象层 - 精度、标量、索引、容差等基础类型"
license = "MIT"
repository = "https://github.com/marihydro/marihydro"

[dependencies]
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["precision-f64"]
precision-f32 = []
precision-f64 = []
