# marihydro\crates\mh_io\Cargo.toml

[package]
name = "mh_io"
version = "0.1.0"
edition = "2021"

[dependencies]
mh_foundation = { path = "../mh_foundation" }
mh_mesh = { path = "../mh_mesh" }
mh_terrain = { path = "../mh_terrain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
gdal = ["dep:gdal"]
netcdf = ["dep:netcdf"]

[dependencies.gdal]
version = "0.16"
optional = true

[dependencies.netcdf]
version = "0.8"
optional = true

