# marihydro\crates\mh_mesh\Cargo.toml

[package]
name = "mh_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
mh_foundation = { path = "../mh_foundation" }
mh_geo = { path = "../mh_geo" }
memmap2 = "0.9"
bytemuck = { version = "1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
rstar = "0.12"  # R-Tree 空间索引

[features]
default = []
parallel = ["rayon"]

[dependencies.rayon]
version = "1.10"
optional = true

