# marihydro\crates\mh_physics\Cargo.toml

[package]
name = "mh_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
mh_foundation = { path = "../mh_foundation" }
mh_mesh = { path = "../mh_mesh" }
mh_geo = { path = "../mh_geo" }
ndarray = "0.16"
rayon = "1.10"      #核心依赖
glam = "0.29"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
mh_geo = { path = "../mh_geo" }
mh_mesh = { path = "../mh_mesh" }

[[test]]
name = "mass_conservation"
path = "tests/mass_conservation.rs"
