# marihydro\crates\mh_physics\Cargo.toml

[package]
name = "mh_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
mh_core = { path = "../mh_core" }
mh_foundation = { path = "../mh_foundation" }
mh_mesh = { path = "../mh_mesh" }
mh_geo = { path = "../mh_geo" }
ndarray = "0.16"
rayon = "1.10"      #核心依赖
glam = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
num-traits = "0.2"

[dev-dependencies]
mh_geo = { path = "../mh_geo" }
mh_mesh = { path = "../mh_mesh" }
rand = "0.8"

[[test]]
name = "mass_conservation"
path = "tests/mass_conservation.rs"
