# marihydro/crates/mh_physics/Cargo.toml

[package]
name = "mh_physics"
version = "0.1.0"
edition = "2021"

[dependencies]
# 架构层级
mh_runtime = { path = "../mh_runtime" }
mh_config = { path = "../mh_config" }
mh_foundation = { path = "../mh_foundation" }
mh_mesh = { path = "../mh_mesh" }
mh_geo = { path = "../mh_geo" }

cfg-if = "1.0"

# 核心数值库
ndarray = { version = "0.16", default-features = false }
rayon = { version = "1.10", optional = true }
glam = { version = "0.29", features = ["libm", "std"] }

# 序列化
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"

# 其他
log = "0.4"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
num-traits = { version = "0.2", default-features = false }

# 内存对齐向量
aligned-vec = "0.5"

[features]
# 并行计算支持
parallel = ["rayon"]
default = ["parallel"]

[dev-dependencies]
mh_geo = { path = "../mh_geo" }
mh_mesh = { path = "../mh_mesh" }
rand = "0.8"

[[test]]
name = "mass_conservation"
path = "tests/mass_conservation.rs"